image visibility issue fixed

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -67,6 +67,5 @@
 }
 
 .mat-header-image {
-  background-image: url('../assets/signify-logo.jpg');
   background-size: cover;
 }
